plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.nb.globalerp.training'
version = '0.0.1-SNAPSHOT'
description = 'sitebackend-global-erp'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-kafka'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'


    implementation 'org.apache.pdfbox:pdfbox:3.0.5'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.21.1'
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    implementation 'org.postgresql:postgresql:42.7.5'

    implementation 'org.mapstruct:mapstruct:1.6.0'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.0'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
